fix lost echos server

--- a/src/rccjs/WSockNodeJs.cls
+++ b/src/rccjs/WSockNodeJs.cls
@@ -56,7 +56,7 @@ control
 	quit 			
 
 selsrv
-	set server(1)="ws://echo.websocket.org/"
+	set server(1)="wss://ws.postman-echo.com/raw"
 	set server(2)="--- server 2 ----"
 	set server(3)="--- server 3 ----"
 	write !,"Known Hosts (*=Exit) [1]:",!
